--- a/client/cafe-react/src/Style/style.scss
+++ b/client/cafe-react/src/Style/style.scss
@@ -26,7 +26,7 @@
   line-height: 25px;
 }
 
-.round-button {
+.roundButton {
   background-color: transparent;
   border: 2px solid transparent;
   border-radius: 50%;
@@ -44,4 +44,37 @@
 
 .container{
   padding: 20px;
+}
+
+.formField {
+  position: relative;
+
+  .input{
+    width: 100%;
+    padding: 20px;
+    margin: 8px 0 15px 0;
+    box-sizing: border-box;
+    border: 1px solid gray;
+    border-radius: 4px;
+    outline: none;
+
+    &:hover{
+      border: 1px solid black;
+    }
+
+    &:focus {
+      border-color: #FF8C00; // Зміна коліру бордера при фокусі
+    }
+  }
+  button{
+    position: absolute;
+    margin-top: 13px;
+    margin-right: 5px;
+    right: 0;
+    svg{
+      color: #707070;
+      font-size: 25px;
+      padding: 0;
+    }
+  }
 }
